manual de estilo

--- a/ademir/cria.html
+++ b/ademir/cria.html
@@ -11,6 +11,8 @@
         <center>
         <h1>Site dos Resumos - Criar um resumo</h1>
         <br>
+        Não se esqueça de seguir o <a target="_blank" href="estilo.html">Manual de Estilo!</a><br>
+        <br>
         <form action="atuadores/cria.php" method="POST">
             <table align="center">
                 <tr><td>Nome do arquivo: </td><td><input type="text" name="filename"></tr>
