--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -23,6 +23,8 @@
         <br>
         Para usar texto em negrito ou itálico, use [b:<b>texto em negrito aqui</b>] e [i:<i>texto em itálico aqui</i>].<br>
         <br>
+        Para usar texto maior, para tópicos e dar destaque, use [big:<b>texto grande aqui</b>].<br>
+        <br>
         Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
         <br>
         <br>
