--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -21,11 +21,11 @@
         Para adicionar uma imagem, use [imagem:<b>http://site.bom.dia/imagem.jpg</b>].<br>
         Na dúvida, envie as imagens para o <a target="_blank" href="//imgur.com">Imgur</a>.<br>
         <br>
-        Para usar texto em negrito ou itálico, use [b:<b>texto em negrito aqui</b>] e [i:<i>texto em itálico aqui</i>].<br>
+        Para usar texto em negrito ou itálico, use [b]<b>texto em negrito aqui</b>[/b] e [i]<i>texto em itálico aqui</i>[/i].<br>
         <br>
-        Para usar texto sublinhado, use [u:<u>texto sublinhado aqui</u>].<br>
+        Para usar texto sublinhado, use [u]<u>texto sublinhado aqui</u>[/u].<br>
         <br>
-        Para usar texto maior, para tópicos e dar destaque, use [big:<b>texto grande aqui</b>].<br>
+        Para usar texto maior, para tópicos e dar destaque, use [big]<b>texto grande aqui</b>[/big].<br>
         <br>
         Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
         <br>
