--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -27,6 +27,10 @@
         <br>
         Para usar texto maior, para tópicos e dar destaque, use [big]<b>texto grande aqui</b>[/big].<br>
         <br>
+        Também há suporte a cores no texto. Use [cor:<i>sua cor aqui</i>]texto colorido[/cor].<br>
+        A cor pode ser uma <a href="http://www.w3schools.com/tags/ref_colorpicker.asp" target='_blank'>cor hexadecimal HTML</a>.<br>
+        O nome da maioria das cores em inglês e letras minúsculas, como red, yellow, e green também costuma funcionar.<br>
+        <br>
         Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
         <br>
         <br>
