--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -29,7 +29,8 @@
         <br>
         Também há suporte a cores no texto. Use [cor:<i>sua cor aqui</i>]texto colorido[/cor].<br>
         A cor pode ser uma <a href="http://www.w3schools.com/tags/ref_colorpicker.asp" target='_blank'>cor hexadecimal HTML</a>.<br>
-        O nome da maioria das cores em inglês e letras minúsculas, como red, yellow, e green também costuma funcionar.<br>
+        O nome da maioria das cores em inglês, como red, yellow, e green também costuma funcionar (podem ser prefixadas com "dark" e "light").<br>
+        <a href="http://www.w3schools.com/cssref/css_colornames.asp" target="_blank">Aqui</a> também há uma lista com todos os nomes de cores em inglês.<br>
         <br>
         Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
         <br>
