--- a/ademir/cria.html
+++ b/ademir/cria.html
@@ -6,20 +6,22 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
-    
+
     <body>
         <center>
-        <h1>Site dos Resumos - Criar um resumo</h1>
-        <br>
-        Não se esqueça de seguir o <a target="_blank" href="estilo.html">Manual de Estilo</a>!<br>
-        <br>
-        <form action="atuadores/cria.php" method="POST">
-            <table align="center">
-                <tr><td>Título: </td><td><input type="text" name="titulo"></tr>
-                <tr><td>Autoria: </td><td><input type="text" name="autoria"></tr>
-                <tr><td>Corpo do texto: </td><td><textarea rows="50" cols="75" name="dados"></textarea></tr>
-            </table>
-            <input type="submit" value="Criar resumo!">
-        </form>
+            <h1>Site dos Resumos - Criar um resumo</h1>
+            <br>
+            Não se esqueça de seguir o <a target="_blank" href="estilo.html">Manual de Estilo</a>!<br>
+            <br>
+            <form action="atuadores/cria.php" method="POST">
+                <table align="center">
+                    <tr><td>Título: </td><td><input type="text" name="titulo"></tr>
+                    <tr><td>Nome de arquivo: </td><td><input type="text" id="n" name="fname" value=""></tr>
+                    <tr><td>Autoria: </td><td><input type="text" name="autoria"></tr>
+                    <tr><td>Corpo do texto: </td><td><textarea rows="50" cols="75" name="dados"></textarea></tr>
+                </table>
+                <input type="submit" value="Criar resumo!">
+            </form>
+        </center>
     </body>
 </html>
