--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
-    
+
     <body>
         <center>
         <h1>Site dos Resumos - Manual de Estilo</h1>
@@ -15,6 +15,8 @@
         Quando você está escrevendo algo que vai afetar os estudos dos outros, é esperado um pouco de dedicação.<br>
         <br>
         Primeiramente, use a norma culta de gramática, e deixe os tópicos fáceis de se encontrar e identificar.<br>
+        <br>
+        Também escolha um nome de arquivo ALFANUMÉRICO que mantenha a sua URL bonita. Caso contráriom uma aleatória será usada.<br>
         <br>
         Para criar um link, digite [<b>http://seulinkaqui.bom.dia</b>|<i>Texto do Link</i>].<br>
         <br>
@@ -31,6 +33,8 @@
         A cor pode ser uma <a href="http://www.w3schools.com/tags/ref_colorpicker.asp" target='_blank'>cor hexadecimal HTML</a>.<br>
         O nome da maioria das cores em inglês, como red, yellow, e green também costuma funcionar (podem ser prefixadas com "dark" e "light").<br>
         <a href="http://www.w3schools.com/cssref/css_colornames.asp" target="_blank">Aqui</a> também há uma lista com todos os nomes de cores em inglês.<br>
+        <br>
+        Você pode fazer texto sub ou super-escrito usando as tags [sub] e [sup], e fechando-as com [/sub] e [/sup], respectivamente.<br>
         <br>
         Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
         <br>
