--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -16,7 +16,7 @@
         <br>
         Primeiramente, use a norma culta de gramática, e deixe os tópicos fáceis de se encontrar e identificar.<br>
         <br>
-        Também escolha um nome de arquivo ALFANUMÉRICO que mantenha a sua URL bonita. Caso contráriom uma aleatória será usada.<br>
+        Também escolha um nome de arquivo ALFANUMÉRICO que mantenha a sua URL bonita. Caso contrário uma aleatória será usada.<br>
         <br>
         Para criar um link, digite [<b>http://seulinkaqui.bom.dia</b>|<i>Texto do Link</i>].<br>
         <br>
