--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -36,7 +36,9 @@
         <br>
         Você pode fazer texto sub ou super-escrito usando as tags [sub] e [sup], e fechando-as com [/sub] e [/sup], respectivamente.<br>
         <br>
-        Quaisquer dúvidas, pode me chamar no WhatsApp.<br>
+        Para Química, aquele ℓ do cloro pode ser feito com um "{l}".<br>
+        <br>
+        Caso encontre alguma dúvida ou problema, pode me chamar no WhatsApp!<br>
         <br>
         <br>
         <h3>~ Bruno</h3>
