SE BUGAR A CULPA É DO PH

--- a/ademir/cria.html
+++ b/ademir/cria.html
@@ -15,6 +15,7 @@
             <br>
             <form action="atuadores/cria.php" method="POST">
                 <table align="center">
+                    <tr><td>Matéria: </td><td><input type="text" name="materia"></tr>
                     <tr><td>Título: </td><td><input type="text" name="titulo"></tr>
                     <tr><td>Nome de arquivo: </td><td><input type="text" id="n" name="fname" value=""></tr>
                     <tr><td>Autoria: </td><td><input type="text" name="autoria"></tr>
