--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -16,9 +16,11 @@
         <br>
         Primeiramente, use a norma culta de gramática, e deixe os tópicos fáceis de se encontrar e identificar.<br>
         <br>
-        Use o seguinte formato de título: "Matéria: Título aqui". Sem perguntas.<br>
+        Coloque o nome de matéria adequado, para preservar o agrupamento.<br>
         <br>
-        Também escolha um nome de arquivo ALFANUMÉRICO que mantenha a sua URL bonita. Caso contrário uma aleatória será usada.<br>
+        Também escolha um nome de arquivo <i>ALFANUMÉRICO</i> que mantenha a sua URL bonita. Caso contrário uma aleatória será usada.<br>
+        Alfanumérico significa as letras do alfabeto maiúsculas ou minúsculas sem nenhum sinal gráfico, e os dígitos de 0 a 9.<br>
+        Basicamente, o alfabeto "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789".<br>
         <br>
         Para criar um link, digite [<b>http://seulinkaqui.bom.dia</b>|<i>Texto do Link</i>].<br>
         <br>
@@ -38,7 +40,9 @@
         <br>
         Você pode fazer texto sub ou super-escrito usando as tags [sub] e [sup], e fechando-as com [/sub] e [/sup], respectivamente.<br>
         <br>
-        Para Química, aquele ℓ do cloro pode ser feito com um "{l}".<br>
+        Para Química, aquele ℓ do cloro e do alumínio pode ser feito com um "{l}".<br>
+        <br>
+        Quer exemplos? Edite algum resumo meu e você verá o uso interminável desse sistema de formatação.<br>
         <br>
         Caso encontre alguma dúvida ou problema, pode me chamar no WhatsApp!<br>
         <br>
