--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -2,7 +2,7 @@
     <head>
         <title>Manual de Estilo</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/dark.css">
+        <link rel="stylesheet" type="text/css" href="../resumo.css">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
@@ -20,7 +20,8 @@
         <br>
         Também escolha um nome de arquivo <i>ALFANUMÉRICO</i> que mantenha a sua URL bonita. Caso contrário uma aleatória será usada.<br>
         Alfanumérico significa as letras do alfabeto maiúsculas ou minúsculas sem nenhum sinal gráfico, e os dígitos de 0 a 9.<br>
-        Basicamente, o alfabeto "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789".<br>
+        Porém, também são permitidos hífens ("-") e underscores ("_").<br>
+        Basicamente, o alfabeto "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_".<br>
         <br>
         Para criar um link, digite [<b>http://seulinkaqui.bom.dia</b>|<i>Texto do Link</i>].<br>
         <br>
