editor visual e pá

--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -32,6 +32,8 @@
         <br>
         Para usar texto sublinhado, use [u]<u>texto sublinhado aqui</u>[/u].<br>
         <br>
+        Texto <s>cortado</s> pode ser feito com a [s] e [/s].<br>
+        <br>
         Para usar texto maior, para tópicos e dar destaque, use [big]<b>texto grande aqui</b>[/big].<br>
         <br>
         Também há suporte a cores no texto. Use [cor:<i>sua cor aqui</i>]texto colorido[/cor].<br>
@@ -42,8 +44,11 @@
         Você pode fazer texto sub ou super-escrito usando as tags [sub] e [sup], e fechando-as com [/sub] e [/sup], respectivamente.<br>
         <br>
         Para Química, aquele ℓ do cloro e do alumínio pode ser feito com um "{l}".<br>
+        Também é útil a tag [code] e [/code] para deixar a fonte monoespaçada. Bem útil para fórmulas estruturais.<br>
+        Veja os meus resumos de química para ter uma ideia.<br>
         <br>
         Quer exemplos? Edite algum resumo meu e você verá o uso interminável desse sistema de formatação.<br>
+        Você também pode tentar a versão de testes do <a href="../visual/">Editor Visual</a>!<br>
         <br>
         Caso encontre alguma dúvida ou problema, pode me chamar no WhatsApp!<br>
         <br>
