TODO O ESPECTRO VISÍVEL DE CORES!

--- a/ademir/estilo.html
+++ b/ademir/estilo.html
@@ -23,6 +23,10 @@
         Porém, também são permitidos hífens ("-") e underscores ("_").<br>
         Basicamente, o alfabeto "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_".<br>
         <br>
+        <br><b>As informações abaixo podem estar desatualizadas, e são definitivamente inúteis.<br>
+            Há um editor visual que dispensa a edição de código diretamente. <a href="../visual/">Muito melhor, né?</a>
+        <br></b>
+        <br>
         Para criar um link, digite [<b>http://seulinkaqui.bom.dia</b>|<i>Texto do Link</i>].<br>
         <br>
         Para adicionar uma imagem, use [imagem:<b>http://site.bom.dia/imagem.jpg</b>].<br>
