--- a/visual/index.html
+++ b/visual/index.html
@@ -13,41 +13,49 @@
             <h1>Editor Visual de Resumos<sub><small>BETA</small></sub></h1>
             Este editor visa dispensar a edição direta de código de resumos.<br>
             Ainda estou testando, tenha paciência.<br>
-            <br>
-            <div id="ferramentas">
-                Selecione o texto e clique em um desses botões para aplicar um efeito de texto.<br>
-                <button onclick="limpar()">Limpar efeitos</button>
-                <button onclick="enclose('b')"><b>Negrito</b></button>
-                <button onclick="enclose('i')"><i>Itálico</i></button>
-                <button onclick="enclose('u')"><u>Sublinhado</u></button>
-                <button onclick="enclose('s')">Cortado</button>
-                <button onclick="enclose('sub')">Subscrito</button>
-                <button onclick="enclose('sup')">Superscrito</button>
-                <button onclick="enclose('code')">Monoespaçado</button>
-                <button onclick="enclose('big')">Grande</button>
-                <button onclick="cor()" id="colorButton" title="Use o seletor ali em cima!">Texto colorido</button>
-                <br>
-                Ou posicione o cursor e clique em um dos botões para inserir links, imagens, tabelas, etc.<br>
-                <button onclick="inserir('[hr]')">Inserir linha horizontal</button>
-                <button onclick="imagem()">Inserir imagem</button>
-                <button onclick="link()">Inserir link</button>
-                <button onclick="tabela()">Inserir tabela</button>
-            </div>
-            <textarea oninput="preview();" onblur="updateSelection()" id="editor" class="editor" autofocus></textarea>
-            <div id="cores">Seletor de cores:<br>
-                <table>
-                    <tr><td>Vermelho:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="r"></td></tr>
-                    <tr><td>Verde:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="g"></td></tr>
-                    <tr><td>Azul:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="b"></td></tr>
-                    <tr><td>Prévia:</td><td id="prev"></td></tr>
-                </table>
-            </div>
         </center>
         <br>
+        <div id="ferramentas">
+            Selecione o texto e clique em um desses botões para aplicar um efeito de texto.<br>
+            <button onclick="limpar()">Limpar efeitos</button>
+            <button onclick="enclose('b')"><b>Negrito</b></button>
+            <button onclick="enclose('i')"><i>Itálico</i></button>
+            <button onclick="enclose('u')"><u>Sublinhado</u></button>
+            <button onclick="enclose('s')">Cortado</button>
+            <button onclick="enclose('sub')">Subscrito</button>
+            <button onclick="enclose('sup')">Superscrito</button>
+            <button onclick="enclose('code')">Monoespaçado</button>
+            <button onclick="enclose('big')">Grande</button>
+            <button onclick="cor()" id="colorButton" title="Use o seletor ali em cima!">Texto colorido</button>
+            <br>
+            Ou posicione o cursor e clique em um dos botões para inserir links, imagens, tabelas, etc.<br>
+            <button onclick="inserir('[hr]')">Inserir linha horizontal</button>
+            <button onclick="imagem()">Inserir imagem</button>
+            <button onclick="link()">Inserir link</button>
+            <button onclick="tabela()">Inserir tabela</button>
+        </div>
+        <table class="editable">
+            <tr><td class="editortd">
+                <br>
+                O código:<br><br>
+                <textarea oninput="preview();" onblur="updateSelection()" id="editor" class="editor" autofocus></textarea>
+            </td>
+            <td class="outtd">
+                <br>
+                Como vai ficar:<br><br><span class="conteudo" id="out"></div>
+            </td></tr>
+        </table>
+        
+        <div id="cores">Seletor de cores:<br>
+            <table>
+                <tr><td>Vermelho:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="r"></td></tr>
+                <tr><td>Verde:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="g"></td></tr>
+                <tr><td>Azul:</td><td><input oninput="updateColors()" value="0" type="range" min="0" max="255" id="b"></td></tr>
+                <tr><td>Prévia:</td><td id="prev"></td></tr>
+            </table>
+        </div>
         <br>
-        <h3>Pré-visualização:</h3>
         <br>
-        <div class="conteudo" id="out"></div>
         <script src="visual.js"></script>
     </body>
 </html>
