--- a/visual/index.html
+++ b/visual/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" type="text/css" href="editor.css">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {inlineMath: [["[tex]", "[/tex]"], ["\\(","\\)"]]}
+        });
+        </script>
+        <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
     </head>
 
     <body>
